# sidex

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  extensions-meta.json  index.html  package-lock.json  package.json  port_manifest.json  vite.config.ts
.github/workflows/: release.yml
crates/sidex-app/: Cargo.toml
crates/sidex-app/src/: app.rs  clipboard.rs  commands.rs  document_state.rs  event_loop.rs  file_dialog.rs  layout.rs  lib.rs  main.rs
crates/sidex-db/src/: db.rs  lib.rs  recent.rs  state.rs
crates/sidex-editor/: Cargo.toml
crates/sidex-editor/src/: completion.rs  cursor.rs  decoration.rs  document.rs  lib.rs  multi_cursor.rs  selection.rs  snippet.rs  undo.rs  viewport.rs  word.rs
crates/sidex-editor/src/contrib/: bracket_matching.rs  clipboard_operations.rs  code_action.rs  codelens.rs  color_picker.rs  comment.rs  find.rs  folding.rs  hover.rs  indent_guide.rs  inlay_hints.rs  lines_operations.rs  linked_editing.rs  mod.rs  multicursor.rs  parameter_hints.rs  rename.rs  snippet_controller.rs  sticky_scroll.rs  suggest.rs  word_highlighter.rs
crates/sidex-extension-api/: Cargo.toml
crates/sidex-extension-api/src/: api.rs  commands_api.rs  debug_api.rs  languages_api.rs  lib.rs  scm_api.rs  tasks_api.rs  test_api.rs  window.rs  workspace_api.rs
crates/sidex-extensions/: Cargo.toml
crates/sidex-extensions/src/: host.rs  installer.rs  lib.rs  manifest.rs  marketplace.rs  registry.rs  vsix.rs
crates/sidex-git/src/: blame.rs  diff.rs  lib.rs  log.rs  operations.rs  repo.rs  status.rs
crates/sidex-gpu/: Cargo.toml
crates/sidex-gpu/src/: color.rs  cursor_renderer.rs  editor_view.rs  gutter.rs  lib.rs  line_renderer.rs  minimap.rs  pipeline.rs  rect_renderer.rs  renderer.rs  scene.rs  scroll.rs  selection_renderer.rs  text_atlas.rs  text_layout.rs  text_renderer.rs  vertex.rs
crates/sidex-keymap/: Cargo.toml
crates/sidex-keymap/src/: context.rs  defaults.rs  keybinding.rs  lib.rs  resolver.rs
crates/sidex-lsp/src/: capabilities.rs  completion_engine.rs  diagnostics.rs  go_to.rs  hover_engine.rs  lib.rs  rename_engine.rs  signature_help.rs
crates/sidex-remote/src/: codespaces.rs  container.rs  lib.rs  manager.rs  server.rs  ssh.rs  tunnel.rs  wsl.rs
crates/sidex-settings/src/: defaults.rs  jsonc.rs  lib.rs  schema.rs  settings.rs
crates/sidex-syntax/: Cargo.toml
crates/sidex-syntax/src/: highlight.rs  language.rs  lib.rs  semantic_tokens.rs  textmate.rs
crates/sidex-terminal/: Cargo.toml
crates/sidex-terminal/src/: emulator.rs  grid.rs  lib.rs  manager.rs  pty.rs  shell.rs
crates/sidex-text/src/: buffer.rs  encoding.rs  lib.rs  line_ending.rs  search.rs
crates/sidex-theme/src/: color.rs  default_themes.rs  lib.rs  product_icons.rs  theme.rs  token_color.rs
crates/sidex-ui/: Cargo.toml
crates/sidex-ui/src/: layout.rs  lib.rs  widget.rs
crates/sidex-workspace/: Cargo.toml
crates/sidex-workspace/src/: file_tree.rs  index.rs  lib.rs  search.rs  watcher.rs
public/: builtin-extensions.js
scripts/: setup-extensions.sh
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/extension-host/: host.cjs  server.cjs
src-tauri/src/: lib.rs
(+80 files in other folders)
