[package]
name = "sidex-app"
description = "SideX — A fast, native code editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sidex"
path = "src/main.rs"

[dependencies]
sidex-text = { workspace = true }
sidex-editor = { workspace = true }
sidex-gpu = { workspace = true }
sidex-ui = { workspace = true }
sidex-syntax = { workspace = true }
sidex-lsp = { workspace = true }
sidex-workspace = { workspace = true }
sidex-terminal = { workspace = true }
sidex-git = { workspace = true }
sidex-extensions = { workspace = true }
sidex-extension-api = { workspace = true }
sidex-theme = { workspace = true }
sidex-keymap = { workspace = true }
sidex-settings = { workspace = true }
sidex-db = { workspace = true }
sidex-remote = { workspace = true }
tokio = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
dirs = "5"
arboard = "3"
rfd = "0.15"
lsp-types = "0.97"

[lints]
workspace = true
