[package]
name = "sidex-gpu"
description = "GPU-accelerated rendering for the SideX editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wgpu = { workspace = true }
cosmic-text = { workspace = true }
winit = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
parking_lot = { workspace = true }
thiserror = "2"
log = "0.4"
linked-hash-map = "0.5"

[lints]
workspace = true
